--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,19 +14,19 @@
         <div class="col-3">
           <div class="circle">
             <br />
-            You know
-          <br />
-          you need
-          <br />
-          to code
-        </div>
+            Dad jokes
+            <br />
+            so bad
+            <br />
+           they're good!
+          </div>
         <div class="col-4 slogan">
           Splurting out dad jokes that are so bad, they're good!
         </div>
         <div class="col-5 links">
           <%= link_to 'Contribute', '#' %>
-        <%= link_to 'About', '#' %>
-      </div>
+          <%= link_to 'About', '#' %>
+        </div>
       </header>
 
       <hr />
@@ -34,5 +34,6 @@
       <br class="clear" />
 
     <%= yield %>
+
   </body>
 </html>
