--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,37 +11,39 @@
 
   <body>
       <header class="row">
-        <div class="col-3">
-          <div class="circle">
-            <br />
-            Dad jokes
-            <br />
-            so bad
-            <br />
-           they're good!
-          </div>
-        <div class="col-4 slogan">
-          Splurting out dad jokes that are so bad, they're good!
-        </div>
-        <div class="col-5 links">
-          <%= link_to 'Contribute', '#' %>
-          <%= link_to 'About', '#' %>
-        </div>
-      </header>
-
-      <hr />
-
-      <br class="clear" />
-
-      <div class="container">
-        <%= yield %>
+      <div class="col-3">
+        <%= link_to root_path, class: 'logo' do %>
+        <div class="circle">
+        <br />
+        DAD JOKES
+        <br />
+        SO BAD
+        <br />
+        SO GOOD!
       </div>
+      <% end %>
+      </div>
+      <div class="col-4 slogan">
+        Splurting out terrible dad jokes and grilling advice while wearing camo crocs and cargo shorts!
+      </div>
+       <div class="col-5 links">
+        <%= link_to 'Contribute', new_quote_path %>
+        <%= link_to 'About', '#' %>
+      </div>
+    </header>
+
+    <hr />
+
+    <br class="clear" />
+
+      <%= yield %>
+    
 
       <div class="footer">
         <div class="container">
           <div class="row">
             <div class="col-6">
-              <%= link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+              <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
             </div>
             <div class="col-6 footer-blurb">
               Proudly hacked by <a href="[YOUR_PORTFOLIO_URL]">[Justin Hooper]</a><br />
